syntax = "proto3";
option go_package = "github.com/Dysproz/ports-db-microservices/pkg/portsprotocol";
package portsprotocol;

message Port {
    string name = 1;
    string city = 2;
    string country = 3;
    repeated string alias = 4;
    repeated string regions = 5;
    repeated float coordinates = 6;
    string province = 7;
    string timezone = 8;
    repeated string unlocs = 9;
    string code = 10;
}

message CreateOrUpdatePortRequest {
    string key = 1;
    Port port = 2;
}

message CreateOrUpdatePortResponse {}

message GetPortRequest {
    string key = 1;
}

message GetPortResponse {
    Port port = 1;
}

service PortService {
  rpc CreateOrUpdatePort(CreateOrUpdatePortRequest) returns (CreateOrUpdatePortResponse) {}
  rpc GetPort(GetPortRequest) returns (GetPortResponse) {}
}
